--- a/02-6/PrimerJS/index.html
+++ b/02-6/PrimerJS/index.html
@@ -12,7 +12,20 @@
     <h1 id="parrafo"></h1>
     
     <h1 id="demo"></h1>
-    <p id="nuevoNombre"></p>
+    <p id="nuevoNombre" style="font-size: 30px;"></p>
+    
+    <button id="boton1" style="cursor: pointer; width: 110px; height: 110px; color: white; background-color: rgb(255, 0, 0); border: none; font-family: Arial, Helvetica, sans-serif; font-size: 20px; border-radius: 100px;">No Tocar</button>
+
+    <p>El resultado de la suma es: <span id="sumar1"></span></p>
+
+    <p><label for="numero1">Numero1</label>
+    <input type="number" name="numero1" id="numero1"></p>
+    <p>
+        <label for="numero2">Numero2</label>
+        <input type="number" name="numero2" id="numero2">
+    </p>
+    <button onclick="sumar2()">SUMA</button>
+    <p id="sumarResultado"></p>
 </body>
 <script src="js/primerScript.js"></script>
 </html>
