--- a/Indica tu edad 10-6/index.html
+++ b/Indica tu edad 10-6/index.html
@@ -5,25 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Letra DNI</title>
-    <link rel="shortcut icon" href="img/Arte.webp" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <section class="contenedor">
-        <h1>Calculo de la letra de un DNI</h1>
-        <div id="imgDni">
+        <h1>Calculo de la edad</h1>
+        <!-- <div id="imgDni">
             <img src="img/dni.jpg" alt="DNI">
-        </div>
+        </div> -->
 
-        <!-- Leer los datos de un DNI -->
+        <!-- Leer los datos de edad -->
         <div id="div1">
-        <input type="text" name="" id="dni" placeholder="Escribe tu DNI (sin letra)">
-        <button value="calcular" id="calcular" onclick="calculoDni()">Mostrar Letra</button>
+        <input type="text" name="" id="edad" placeholder="Escribe tu edad">
+        <button value="calcular" id="calcular" onclick="calculoEdad()">Te digo información</button>
         </div>
 
         <p id="msnError"></p>
-        <!-- Resultado del calculo de la letra -->
-        <h1 id="resultado"></h1>
+        <!-- Resultado del calculo de la edad -->
+        <h1 id="mensaje"></h1>
     </section>
     <script src="js/script.js"></script>
 </body>
