--- a/menu/index.html
+++ b/menu/index.html
@@ -12,7 +12,7 @@
         <ul class="menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="../02-6/PrimerJS/index.html">Script 1</a></li>
-            <li><a href=""></a></li>
+            <li><a href="../03-5/index.html">Script 2</a></li>
         </ul>
     </nav>
 </body>
