--- a/16-6/index.html
+++ b/16-6/index.html
@@ -9,6 +9,17 @@
 </head>
 <body>
     <h1>Hoy es <span id="dia"></span></h1>
+    <label for="notas">Ponga su nota:</label>
+    <input type="number" id="notas">
+    <button onclick="nota()">Pulse</button>
+    <h1>La nota es: <span id="nota"></span></h1>
+    <div id="caja"></div>
+    
+    <label for="colorS">Dime un numero del 1 al 6</label>
+    <input type="number" id="numero">
+    <button onclick="cambiarColor()"  name="" id="">Mostrar colores</button>
+    <div id="caja1" style=" width: 250px; height: 250px; margin: auto;border: 1px solid black;"></div>
+    <div id="caja2" style="width: 250px; height: 250px; margin: auto;border: 1px solid black;"></div>
 </body>
 <script src="js/quinto.js"></script>
 </html>
