--- a/09-6/index.html
+++ b/09-6/index.html
@@ -7,7 +7,7 @@
     <title>Matrices</title>
 </head>
 <body>
-    
+    <h1>Tercero</h1>
     <h3>Este es el indice 0 del array dias</h3>
     <p id="dia0">
     <h3>Este es el indice 6 del array dias</h3>
