--- a/16-6/index.html
+++ b/16-6/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Hoy es <span id="dia"></span></h1>
+    <h1>Quinto</h1>
+    <h2>Hoy es <span id="dia"></span></h2>
     <label for="notas">Ponga su nota:</label>
     <input type="number" id="notas">
     <button onclick="nota()">Pulse</button>
-    <h1>La nota es: <span id="nota"></span></h1>
+    <h2>La nota es: <span id="nota"></span></h2>
     <div id="caja"></div>
     
     <label for="colorS">Dime un numero del 1 al 6</label>
