--- a/03-5/index.html
+++ b/03-5/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Segundo</title>
 </head>
 <body>
+    <h1>Segundo</h1>
     <section>
         <h2>Operadores de Comparación</h2>
         <p>¿Es 2 igual a 3? ->  <span id="comp1"></span></p>
