--- a/09-6/index2.html
+++ b/09-6/index2.html
@@ -7,6 +7,7 @@
     <title>Cuarto</title>
 </head>
 <body>
+    <h1>Cuarto</h1>
     <h1>Encabezado de nivel 1</h1>
     <h2>Encabezado de nivel 2</h2>
     <h3>Encabezado de nivel 3</h3>
