--- a/17-6/index.html
+++ b/17-6/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <h1>Sexto</h1>
+    <div>
+        <button onclick="ejemploPrimero()">Primer Ejemplo</button>
+        <button onclick="ejemploArrays()">Ejemplo Array</button>
+        <button onclick="alertaTexto()">Ejercicio BucleTexto</button>
+        <button onclick="alertaNumero()">Ejercicio Numero par</button>
+        <button onclick="ejemploDoWhile()">Ejercicio doWhile</button>
+    </div>
 </body>
 <script src="js/sexto.js"></script>
 </html>
