--- a/menu/index.html
+++ b/menu/index.html
@@ -10,9 +10,15 @@
 <body>
     <nav>
         <ul class="menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="../02-6/PrimerJS/index.html">Script 1</a></li>
-            <li><a href="../03-5/index.html">Script 2</a></li>
+            <li><a class="home" href="index.html">Home</a></li>
+            <li><a href="../Primer/PrimerJS/index.html">Script 1</a></li>
+            <li><a href="../Segundo/index.html">Script 2</a></li>
+            <li><a href="../TerceroCuarto/index.html">Script 3</a></li>
+            <li><a href="../TerceroCuarto/index2.html">Script 4</a></li>
+            <li><a href="../Quinto/index.html">Script 5</a></li>
+            <li><a href="../Sexto/index.html">Script 6</a></li>
+            <li><a href="../LetraDni/index.html">DNI</a></li>
+            <li><a href="../Edad/index.html">Edad</a></li>
         </ul>
     </nav>
 </body>
