--- a/menu/index.html
+++ b/menu/index.html
@@ -19,6 +19,7 @@
             <li><a href="../17-6/index.html">Script 6</a></li>
             <li><a href="../23-6/index.html">Script 7</a></li>
             <li><a href="../30-06/index.html">Script 8</a></li>
+            <li><a href="../30-06/index.html">Ejercicios 8</a></li>
             <li><a href="../Letra del DNI 09-6/index.html">DNI</a></li>
             <li><a href="../Indica tu edad 10-6/index.html">Edad</a></li>
         </ul>
