--- a/menu/index.html
+++ b/menu/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu</title>
     <link rel="stylesheet" href="css/menu.css">
 </head>
 <body>
@@ -19,7 +19,10 @@
             <li><a href="../17-6/index.html">Script 6</a></li>
             <li><a href="../23-6/index.html">Script 7</a></li>
             <li><a href="../30-06/index.html">Script 8</a></li>
-            <li><a href="../30-06/index.html">Ejercicios 8</a></li>
+            <li><a href="../01-7/index.html">Ejercicios 8</a></li>
+            <li><a href="../01-7/index9.html">Script 9</a></li>
+            <li><a href="../06-7/index.html">Script 10</a></li>
+
             <li><a href="../Letra del DNI 09-6/index.html">DNI</a></li>
             <li><a href="../Indica tu edad 10-6/index.html">Edad</a></li>
         </ul>
