--- a/06-7/index.html
+++ b/06-7/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="card">
-            <h2 class="titulo">Título 1</h2>
+            <h2 class="titulo">DÉCIMO</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla possimus nobis nihil nisi. Laboriosam, corrupti libero recusandae nostrum quibusdam, praesentium voluptas, iste consequatur pariatur delectus ad cumque voluptatibus ratione consectetur!</p>
         </div>
         <div class="card">
