--- a/07-7/index.html
+++ b/07-7/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="card">
-            <h2 class="titulo">Título 1</h2>
+            <h2 class="titulo">UNDECIMO</h2>
             <p>MEDIA QUERIE</p>
             <p>CSS Media Queries => Responsive Design  media queries, es mediante el cuál podemos hacer excepciones para que unos determinados estilos de diseño sólo se apliquen si se cumplen una serie de condiciones, generalmente relacionadas con el dispositivo mediante el cuál se esta viendo la pagina</p>
         </div>
@@ -48,6 +48,19 @@
             <button class="button-49" role="button" id="boton">Hack</button>
         </div>
     </div>
+
+    <div class="container">
+        <h1>Parte 2</h1>
+        <h2 id="intro">JavaScript HTML DOM</h2>
+        <p>Busqueda de elementos HTML por QuerySelector </p>
+        <p class="intro">Hello World!.</p>
+        <p class="intro">Este ejemplo es un <b>querySelectorAll</b> metodo.</p>
+    <p id="demo1"></p>
+    <p id="demo2"></p>
+</div>
+    
+
+    
 </body>
 <script src="js/undecimo.js"></script>
 </html>
