--- a/menu/index.html
+++ b/menu/index.html
@@ -23,6 +23,7 @@
             <li><a href="../01-7/index9.html">Script 9</a></li>
             <li><a href="../06-7/index.html">Script 10</a></li>
             <li><a href="../07-7/index.html">Script 11</a></li>
+            <li><a href="../07-7/index2.html">Naboo</a></li>
 
             <li><a href="../Letra del DNI 09-6/index.html">DNI</a></li>
             <li><a href="../Indica tu edad 10-6/index.html">Edad</a></li>
