--- a/14-7-zoo/index.html
+++ b/14-7-zoo/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <header class="headerSup row" >
+        <header class="headerSup" >
                 <ul>
                     <li>
                         <span class="material-symbols-outlined">
@@ -58,12 +58,70 @@
                 </button>
             </div>
         </div>
-        <div class="carruselIMG col-8">
-            <img src="Proyecto ZOO/img/ana-caballo.webp" alt="">
-            <img src="Proyecto ZOO/img/marta-leonmarino.webp" alt="">
-            <img src="Proyecto ZOO/img/adrian-gato.webp" alt="">
-            <img src="Proyecto ZOO/img/bea-toro.webp" alt="">
+        <div class="carrusel">
+        <h2 style="text-align:center">Conoce a nuestros cuidadores</h2>
+
+        <div class="container">
+            <div class="mySlides">
+                <div class="numbertext">1 / 6</div>
+                <img src="Proyecto ZOO/img/ana-caballo.webp" alt="" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">2 / 6</div>
+                <img src="Proyecto ZOO/img/marta-leonmarino.webp" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">3 / 6</div>
+                <img src="Proyecto ZOO/img/adrian-gato.webp" style="width:100%">
+            </div>
+                
+            <div class="mySlides">
+                <div class="numbertext">4 / 6</div>
+                <img src="Proyecto ZOO/img/bea-toro.webp" style="width:100%">
+            </div>
+
+            <!-- <div class="mySlides">
+                <div class="numbertext">5 / 6</div>
+                <img src="img_nature_wide.jpg" style="width:100%">
+            </div>
+                
+            <div class="mySlides">
+                <div class="numbertext">6 / 6</div>
+                <img src="img_snow_wide.jpg" style="width:100%">
+            </div>
+                 -->
+            <a class="prev" onclick="plusSlides(-1)">❮</a>
+            <a class="next" onclick="plusSlides(1)">❯</a>
+
+            <div class="caption-container">
+                <p id="caption"></p>
+            </div>
+
+            <div class="row">
+                <div class="column">
+                <img class="demo cursor" src="Proyecto ZOO/img/ana-caballo.webp" style="width:100%" onclick="currentSlide(1)" alt="Experta en Equitacion: Ana">
+                </div>
+                <div class="column">
+                <img class="demo cursor" src="Proyecto ZOO/img/marta-leonmarino.webp" style="width:100%" onclick="currentSlide(2)" alt="Experta de la Zona Acuatica: Marta">
+                </div>
+                <div class="column">
+                <img class="demo cursor" src="Proyecto ZOO/img/adrian-gato.webp" style="width:100%" onclick="currentSlide(3)" alt="Experto en animales exoticos: Adrian">
+                </div>
+                <div class="column">
+                <img class="demo cursor" src="Proyecto ZOO/img/bea-toro.webp" style="width:100%" onclick="currentSlide(4)" alt="Experta de la Granja Escuela: Beatriz">
+                </div>
+                <!-- <div class="column">
+                <img class="demo cursor" src="img_nature.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+                </div>    
+                <div class="column">
+                <img class="demo cursor" src="img_snow.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+                </div> -->
+            </div>
         </div>
+        </div>  
     </div>
 </body>
+<script src="js/script.js"></script>
 </html>
