--- a/menu/index.html
+++ b/menu/index.html
@@ -12,18 +12,20 @@
         <ul class="menu">
             <li><a class="home" href="index.html">Home</a></li>
             <li><a href="../02-6/PrimerJS/index.html">Script 1</a></li>
-            <li><a href="../03-5/index.html">Script 2</a></li>
-            <li><a href="../09-6/index.html">Script 3</a></li>
-            <li><a href="../09-6/index2.html">Script 4</a></li>
-            <li><a href="../16-6/index.html">Script 5</a></li>
-            <li><a href="../17-6/index.html">Script 6</a></li>
-            <li><a href="../23-6/index.html">Script 7</a></li>
-            <li><a href="../30-06/index.html">Script 8</a></li>
-            <li><a href="../01-7/index.html">Ejercicios 8</a></li>
-            <li><a href="../01-7/index9.html">Script 9</a></li>
-            <li><a href="../06-7/index.html">Script 10</a></li>
-            <li><a href="../07-7/index.html">Script 11</a></li>
-            <li><a href="../07-7/index2.html">Naboo</a></li>
+            <li><a href="../03-6/SegundoJS/index.html">Script 2</a></li>
+            <li><a href="../09-6/Tercero&Cuatro/index.html">Script 3</a></li>
+            <li><a href="../09-6/Tercero&Cuatro/index2.html">Script 4</a></li>
+            <li><a href="../16-6/Quinto/index.html">Script 5</a></li>
+            <li><a href="../17-6/Sexto/index.html">Script 6</a></li>
+            <li><a href="../23-6/Septimo/index.html">Script 7</a></li>
+            <li><a href="../30-06/Octavo/index.html">Script 8</a></li>
+            <li><a href="../01-7/Octavo/index.html">Ejercicios 8</a></li>
+            <li><a href="../01-7/Noveno/index9.html">Script 9</a></li>
+            <li><a href="../06-7/Decimo/index.html">Script 10</a></li>
+            <li><a href="../07-7/Once-Responsive/index.html">Script 11</a></li>
+            <li><a href="../07-7/Once-Responsive/index2.html">Naboo</a></li>
+            <li><a href="../13-7/Doce/index.html">Script 12</a></li>
+            <li><a href="../27-07/TreceJS/index.html">Script 13</a></li>
 
             <li><a href="../Letra del DNI 09-6/index.html">DNI</a></li>
             <li><a href="../Indica tu edad 10-6/index.html">Edad</a></li>
