--- a/14-7-zoo/index.html
+++ b/14-7-zoo/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
-<body>
+<body onload="cambiarImagen()">
     <div class="container">
         <header class="headerSup" >
                 <ul>
@@ -122,6 +122,8 @@
         </div>
         </div>  
     </div>
+
+    <img src="../14-7-zoo/Proyecto ZOO/img/fotaza-leones.webp" alt="" name="banner" id="banner" style="width: 100%; padding: 0; margin:0;">
 </body>
 <script src="js/script.js"></script>
 </html>
