--- a/27-7/TreceJS/index.html
+++ b/27-7/TreceJS/index.html
@@ -56,7 +56,7 @@
             <p id="mensaje"></p>
         <p id="imc"></p>
         </div>
-        <img src="" alt="">
+        <img id="imagen" src="" alt="">
         
     </form>
 </body>
