--- a/14-7-zoo/index.html
+++ b/14-7-zoo/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoo</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="Proyecto ZOO/iconos/favicon.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="ProyectoZOO/iconos/favicon.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
-<body onload="cambiarImagen()">
+<body>
     <div class="container">
         <header class="headerSup" >
                 <ul>
@@ -37,7 +37,7 @@
     
         <header class="header row">
             <div class="logo col-4">
-                <img src="Proyecto ZOO/iconos/favicon.webp" alt="Logo del zoo">
+                <img src="ProyectoZOO/iconos/favicon.webp" alt="Logo del zoo">
             </div>
         <div class="menu col-8">
             <ul>
@@ -48,7 +48,7 @@
         </div>
         </header>
         <div class="col-12 imagen">
-            <img src="Proyecto ZOO/img/jimmi-el-mono.webp" alt="monito">
+            <img src="ProyectoZOO/img/jimmi-el-mono.webp" alt="monito">
             <div class="centrado col-4">
                 <h1>Ven y disfruta de un dia de Naturaleza en compañia</h1>
                 <p>
@@ -64,22 +64,22 @@
         <div class="container">
             <div class="mySlides">
                 <div class="numbertext">1 / 6</div>
-                <img src="Proyecto ZOO/img/ana-caballo.webp" alt="" style="width:100%">
+                <img src="ProyectoZOO/img/ana-caballo.webp" alt="" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">2 / 6</div>
-                <img src="Proyecto ZOO/img/marta-leonmarino.webp" style="width:100%">
+                <img src="ProyectoZOO/img/marta-leonmarino.webp" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">3 / 6</div>
-                <img src="Proyecto ZOO/img/adrian-gato.webp" style="width:100%">
+                <img src="ProyectoZOO/img/adrian-gato.png" style="width:100%">
             </div>
                 
             <div class="mySlides">
                 <div class="numbertext">4 / 6</div>
-                <img src="Proyecto ZOO/img/bea-toro.webp" style="width:100%">
+                <img src="ProyectoZOO/img/bea-toro.webp" style="width:100%">
             </div>
 
             <!-- <div class="mySlides">
@@ -101,16 +101,16 @@
 
             <div class="row">
                 <div class="column">
-                <img class="demo cursor" src="Proyecto ZOO/img/ana-caballo.webp" style="width:100%" onclick="currentSlide(1)" alt="Experta en Equitacion: Ana">
+                <img class="demo cursor" src="ProyectoZOO/img/ana-caballo.webp" style="width:100%" onclick="currentSlide(1)" alt="Experta en Equitacion: Ana">
                 </div>
                 <div class="column">
-                <img class="demo cursor" src="Proyecto ZOO/img/marta-leonmarino.webp" style="width:100%" onclick="currentSlide(2)" alt="Experta de la Zona Acuatica: Marta">
+                <img class="demo cursor" src="ProyectoZOO/img/marta-leonmarino.webp" style="width:100%" onclick="currentSlide(2)" alt="Experta de la Zona Acuatica: Marta">
                 </div>
                 <div class="column">
-                <img class="demo cursor" src="Proyecto ZOO/img/adrian-gato.webp" style="width:100%" onclick="currentSlide(3)" alt="Experto en animales exoticos: Adrian">
+                <img class="demo cursor" src="ProyectoZOO/img/adrian-gato.png" style="width:100%" onclick="currentSlide(3)" alt="Experto en animales exoticos: Adrian">
                 </div>
                 <div class="column">
-                <img class="demo cursor" src="Proyecto ZOO/img/bea-toro.webp" style="width:100%" onclick="currentSlide(4)" alt="Experta de la Granja Escuela: Beatriz">
+                <img class="demo cursor" src="ProyectoZOO/img/bea-toro.webp" style="width:100%" onclick="currentSlide(4)" alt="Experta de la Granja Escuela: Beatriz">
                 </div>
                 <!-- <div class="column">
                 <img class="demo cursor" src="img_nature.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
@@ -123,7 +123,7 @@
         </div>  
     </div>
 
-    <img src="../14-7-zoo/Proyecto ZOO/img/fotaza-leones.webp" alt="" name="banner" id="banner" style="width: 100%; padding: 0; margin:0;">
+    <img src="../14-7-zoo/ProyectoZOO/img/fotaza-leones.webp" alt="" name="banner" id="banner" style="width: 100%; padding: 0; margin:0;">
 </body>
 <script src="js/script.js"></script>
 </html>
