--- a/14-7-zoo/index.html
+++ b/14-7-zoo/index.html
@@ -41,14 +41,14 @@
             </div>
         <div class="menu col-8">
             <ul>
-                <li><a href=""></a>Inicio</li>
-                <li><a href=""></a>Conocenos</li>
-                <li><a href=""></a>Entrada</li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="indexCto.html">Conocenos</a></li>
+                <li><a href="indexEtr.html">Entrada</a></li>
             </ul>
         </div>
         </header>
         <div class="col-12 imagen">
-            <img src="ProyectoZOO/img/jimmi-el-mono.webp" alt="monito">
+            <img src="ProyectoZOO/img/jimmi-el-mono.webp" alt="monito" name="banner" id="banner">
             <div class="centrado col-4">
                 <h1>Ven y disfruta de un dia de Naturaleza en compañia</h1>
                 <p>
@@ -123,7 +123,6 @@
         </div>  
     </div>
 
-    <img src="../14-7-zoo/ProyectoZOO/img/fotaza-leones.webp" alt="" name="banner" id="banner" style="width: 100%; padding: 0; margin:0;">
 </body>
 <script src="js/script.js"></script>
 </html>
